<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TableLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/btn_add_simple_eqpt_with_qr_ean"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/add_simple_eqpt_qrean"
                android:layout_height="match_parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/btn_add_simple_eqpt_without_qr_ean"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/add_simple_no_eqpt_qrean"
                android:layout_height="match_parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/btn_add_complex_eqpt"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/add_complex_eqpt"
                android:layout_height="match_parent" />
        </TableRow>

    </TableLayout>



</LinearLayout>
