<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:scrollbars = "vertical"
    android:scrollbarStyle="insideInset"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <ImageView
                android:id="@+id/img_scan"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_qrcode"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            >

            <TextView
                android:id="@+id/lib_nom_eqpt"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lib_txt_nom_eqpt"
                />

            <EditText
                android:id="@+id/edit_nom_eqpt"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="0.2"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/lib_date_crea_eqpt"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lib_txt_date_eqpt"
                />

            <TextView
                android:id="@+id/btn_date_crea_eqpt"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="0.3"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/lib_desc_eqpt"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lib_txt_desc_eqpt"
                />

            <EditText
                android:id="@+id/edit_desc_eqpt"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:lines="5"
                android:layout_height="wrap_content"
                />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="0.3"
            android:layout_height="0dp">

            <Button
                android:id="@+id/btn_add_img_eqpt"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="+ (Photos)"
                />

            <ImageView
                android:id="@+id/img_eqpt"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />



        </TableRow>



    </TableLayout>



</ScrollView >
